Update home page

--- a/apps/server/public/error.html
+++ b/apps/server/public/error.html
@@ -12,9 +12,9 @@
 </head>
 <body>
 
-<div class="Body">
-    <div class="Item1" style="width: 100%;">
-        <div class="Center" style="width: 100%;text-align: center;">
+<table class="Body">
+    <tr>
+        <td class="Content" style="text-align: center;">
             <div class="Title" style="
                 font-size: 90px;
                 font-weight: bold;
@@ -29,11 +29,13 @@
             <a class="Btn" href="/">
                 To Home
             </a>
-        </div>
-    </div>
-</div>
-<div class="Footer">
-    <div class="Content">2023 KeyGenQt</div>
-</div>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="1" style="height: 0;">
+            <div class="Footer">2023 KeyGenQt</div>
+        </td>
+    </tr>
+</table>
 </body>
 </html>
