--- a/apps/server/public/index.html
+++ b/apps/server/public/index.html
@@ -12,11 +12,11 @@
 </head>
 <body>
 
-<div class="Body">
-    <div class="Item1">
-        <div class="Center" style="width: 100%;">
+<table class="Body">
+    <tr>
+        <td class="Content">
             <div class="Title">API platform</div>
-            <div class="Title" style="margin-top: -13px;">cloud service</div>
+            <div class="Title">cloud service</div>
             <div class="Line"></div>
             <div class="Text">
                 REST API written in dart for flutter applications.
@@ -27,19 +27,18 @@
             <a class="Btn" href="https://keygenqt.github.io/flutter-aWords/" target="_blank">
                 Documentation
             </a>
-        </div>
-    </div>
-    <div class="Item2">
-        <div class="Center">
-            <div class="Circle3"></div>
+        </td>
+        <td class="Content Right">
             <div class="Circle1">
                 <img src="images/api_animation.gif" alt="animation">
             </div>
-        </div>
-    </div>
-</div>
-<div class="Footer">
-    <div class="Content">2023 KeyGenQt</div>
-</div>
+        </td>
+    </tr>
+    <tr>
+        <td colspan="2" style="height: 0;">
+            <div class="Footer">2023 KeyGenQt</div>
+        </td>
+    </tr>
+</table>
 </body>
 </html>
