--- a/apps/website/web/index.html
+++ b/apps/website/web/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html style="height: 100%;">
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -39,7 +39,14 @@
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
 </head>
-<body>
+<body style="height: 100%;margin: 0;">
+  <table style="width: 100%;height: 100%;">
+    <tr>
+      <td style='text-align: center;'>
+        <img style="width: 100%;max-width: 300px;" alt="logo" src="loading.gif">
+      </td>
+    </tr>
+  </table>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
