--- a/apps/website/web/index.html
+++ b/apps/website/web/index.html
@@ -19,6 +19,7 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="Website aWords.">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
