Add docker for web

--- a/apps/server/public/index.html
+++ b/apps/server/public/index.html
@@ -19,12 +19,12 @@
             <div class="Title">cloud service</div>
             <div class="Line"></div>
             <div class="Text">
-                REST API written in dart for flutter applications.
+                REST API written in Dart for flutter applications.
                 This is an open-source application for learning a foreign language.
                 Available on Android, Aurora OS and web.
                 You can learn more about the API and applications in the project documentation.
             </div>
-            <a class="Btn" href="https://keygenqt.github.io/flutter-aWords/" target="_blank">
+            <a class="Btn" href="https://awords-docs.keygenqt.com" target="_blank">
                 Documentation
             </a>
         </td>
